Testing issue with new styles not showing up in browser

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -167,12 +167,15 @@ p {
   height: 60px;
 }
 
+.request-invite-desktop {
+  display: none;
+}
+
 /* Style the links inside the navigation bar */
 .topnav a {
   background-color: $white;
   display: block;
   float: left;
-  color: $dark-blue;
   font-weight: $light;
   text-align: center;
   padding: 14px 16px;
@@ -240,6 +243,10 @@ p {
     text-align: center;
     margin-bottom: 65px;
   }
+}
+
+#about h2 {
+  text-align: center;
 }
 
 #about .about-content {
@@ -334,9 +341,11 @@ footer {
     }
   }
 }
+
+/* Additional responsive navigation styles */
  
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 767px) {
+  /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
   .topnav a {
     display: none;
   }
@@ -347,7 +356,7 @@ footer {
 }
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 767px) {
   .topnav.responsive {
     position: fixed;
     padding: 0;
@@ -366,6 +375,26 @@ footer {
   }
 }
 
+/* Desktop Style */
+
+@media screen and (min-width: 768px) {
+  /* Navigation */
+  .topnav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .request-invite-desktop {
+    display: inline-block;
+  }
+  .logo {
+    margin: 0;
+  }
+  /* Hero Section */
+  #hero .hero-content {
+    flex-direction: row;
+  }
+}
 
 
 /* ==========================================================================
